# ntvhackathon

./: .gitignore
Assets/: main.unity
Assets/Animations/: BeforeInventoryTimeline.playable  CloseInventory.anim  InventoryView.controller  Plane.controller  PlaneRoot.controller  PlaneRootTurnLeft.anim  PlaneSequenceTimeline.playable  PlaneTakeOff1.anim  ResetPlayableTimeline.playable  ShowInventory.anim
Assets/LiveHaneda/: MovieRenderTexture.renderTexture
Assets/Materials/: GroundTransparent.mat
Assets/Planes/: boeing_787-9_singapore_airlines.prefab
Assets/RenderTextures/: PlaneSequenceTexture.renderTexture
Assets/Scenes/: PlaneSequenceTest.unity  PlaneTap.unity
Assets/Scenes/PlaneSequenceTest/: SuperBloom Profile.asset  Volume Profile.asset
Assets/Scripts/: PlayableDirectorExtensions.cs
Assets/Scripts/Game/: GameController.cs  InventoryView.cs  InventoryViewCell.cs  PlanePrefabRegistry.cs  PlayerInventory.cs  SpawnMarkerData.cs
Assets/Scripts/InspectorTools/: ButtonAttribute.cs
Assets/Scripts/Sequence/: KeepWorldPosition.cs  Rotator.cs  SetWorldPositionBehaviour.cs  SetWorldPositionClip.cs  SetWorldPositionMixerBehaviour.cs  (+2 more)
Assets/Settings/: PC_RPAsset.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/UI/: Cell.prefab
Assets/_Recovery/: 0.unity
Assets/system/: Video3HitDetector.cs  VideoHitDetector.cs  get_time.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
python_tracker/: .env  .gitignore  README.md  cesium_opensky_calibration.py  plane_tracker.py  pyproject.toml  streamlit_opensky_calibration.py
python_tracker/schemas/: camera_config.schema.json  manual_matches.schema.json  plane-tracking.schema.json  with_flight_info.schema.json
python_tracker/src/python_tracker/: __init__.py  calibration.py  opensky_calibration_app.py  web_calibration_server.py
python_tracker/src/python_tracker/web_assets/: app.js  index.html  styles.css
python_tracker/tests/: test_calibration.py  test_import.py  test_plane_tracker.py
python_tracker/unity/: PlaneTrackingModels.cs
(+7 files in other folders)
