[project]
name = "python-tracker"
version = "0.1.0"
description = "Python development environment managed with uv."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.116.0",
    "lap>=0.5.12",
    "opencv-python>=4.12.0",
    "plotly>=6.0.0",
    "streamlit>=1.44.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "jsonschema>=4.25.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
